@@ -1,5 +1,7 @@
 2008-07-16  Akira TAGOH  <tagoh@redhat.com>
 
+	* tests/rhbz_431291.c: Add a testcase for the user specific conf.
+
 	* utils/imsettings-info.c (main): show up the icon file.
 
 2008-07-15  Akira TAGOH  <tagoh@redhat.com>
